Nangband ChangeLog
==================

2002-03-08
----------
- Added RES_POIS20 to weapons of venom and also made them a little rarer.
  (grahame)
- Added Runescrye's new artifact file to the cvs. (takkaria)
- Made areas of detection circlular. Taken the rough way of doing it from ToME.
  (takkaria)

2002-03-03
----------
- Made the title screen bigscreen-compliant. (takkaria)
- Improved object recall. (takkaria)

2002-02-02
----------
- Added the new XML help system. (ajps)
- The title screen is now an AHML file. (ajps)
- Fixed the mac and windows ports comewhat. (takkaria)

2002-02-01
----------
- Code cleanup. (takkaria)

2002-02-29
----------
- Fixed the bug with the new resist system timed resists. Many thanks
  to Fufie on #angband (OPN) for the help! (takkaria)

2002-02-24
----------
- Improved the object recall code to use the new resist code. (takkaria)
- Did more work on the new resist system. (takkaria)

2002-02-22
----------
- Improved the object recall code. (takkaria)
- Added belts of starvation as a new ego type. (grahame)

2002-02-21
----------
- Fixed a few bugs, removed a few compiler warnings. (takkaria)
- Added object recall code. (takkaria)

2002-02-20 (takkaria)
---------------------
- Added Nexus, Chaos and Nether brands (from Antiband).
- Tweaked the artifacts.
- Added the Ring of Elemental Mastery (from Antiband).

Previous
--------
- Added Orbs. These are permanent, non-artifact light sources.
  Very few exist at the moment. (takkaria)
- Added the HUNGER flag which vastly increases the amount of food
  required by the player (grahame)
- Added a belt slot and some belts to wear in those. There are also
  ego-item belts. (grahame)

Changes in Angband alphas:
- Added usage lines for the main-*.c files (Hallvard B Furuseth).
- Fixed the problems with the 'repeat command' command.
- Added a check for the maximum vault size to the vault.txt parser.
- Removed some vaults that were too big for Angband's vault placement
  code.