@@ -803,9 +803,7 @@ typedef int sint;
 #define TR2_SUST_CON        0x00000010L /* Sustain CON */
 #define TR2_SUST_CHR        0x00000020L /* Sustain CHR */
 #define TR2_RES_FEAR        0x00200000L /* Resist fear */
-#define TR2_RES_LITE        0x00400000L /* Resist lite */
-#define TR2_RES_DARK        0x00800000L /* Resist dark */
-#define TR2_RES_BLIND       0x01000000L /* Resist blind */
+#define TR2_NO_BLIND        0x01000000L /* Resist blind */
 #define TR2_RES_CONFU       0x02000000L /* Resist confusion */
 #define TR2_RES_SOUND       0x04000000L /* Resist sound */
 #define TR2_RES_SHARD       0x08000000L /* Resist shards */
