@@ -1832,8 +1832,6 @@ static void calc_bonuses(void)
 	p_ptr->sustain_dex = FALSE;
 	p_ptr->sustain_chr = FALSE;
 	p_ptr->resist_fear = FALSE;
-	p_ptr->resist_lite = FALSE;
-	p_ptr->resist_dark = FALSE;
 	p_ptr->resist_blind = FALSE;
 	p_ptr->resist_confu = FALSE;
 	p_ptr->resist_sound = FALSE;
@@ -1911,9 +1909,7 @@ static void calc_bonuses(void)
 
 	/* Resistance flags */
 	if (f2 & (TR2_RES_FEAR)) p_ptr->resist_fear = TRUE;
-	if (f2 & (TR2_RES_LITE)) p_ptr->resist_lite = TRUE;
-	if (f2 & (TR2_RES_DARK)) p_ptr->resist_dark = TRUE;
-	if (f2 & (TR2_RES_BLIND)) p_ptr->resist_blind = TRUE;
+	if (f2 & (TR2_NO_BLIND)) p_ptr->resist_blind = TRUE;
 	if (f2 & (TR2_RES_CONFU)) p_ptr->resist_confu = TRUE;
 	if (f2 & (TR2_RES_SOUND)) p_ptr->resist_sound = TRUE;
 	if (f2 & (TR2_RES_SHARD)) p_ptr->resist_shard = TRUE;
@@ -2005,9 +2001,7 @@ static void calc_bonuses(void)
 
 		/* Resistance flags */
 		if (f2 & (TR2_RES_FEAR)) p_ptr->resist_fear = TRUE;
-		if (f2 & (TR2_RES_LITE)) p_ptr->resist_lite = TRUE;
-		if (f2 & (TR2_RES_DARK)) p_ptr->resist_dark = TRUE;
-		if (f2 & (TR2_RES_BLIND)) p_ptr->resist_blind = TRUE;
+		if (f2 & (TR2_NO_BLIND)) p_ptr->resist_blind = TRUE;
 		if (f2 & (TR2_RES_CONFU)) p_ptr->resist_confu = TRUE;
 		if (f2 & (TR2_RES_SOUND)) p_ptr->resist_sound = TRUE;
 		if (f2 & (TR2_RES_SHARD)) p_ptr->resist_shard = TRUE;
